added a picture and a button and made some CSS changes

--- a/index.html
+++ b/index.html
@@ -30,11 +30,23 @@
   </head>
   <div class="container">
     <body>
-      <div class="bg-warning">
-        <h1>
-          Rezvan Sameti
-          <i class="fa-solid fa-code" style="color: #1d1e20"></i>
-        </h1>
+      <img
+        src="src/my-picture.jpg"
+        alt="Rezvan Sameti"
+        width="150px"
+        class="mt-5"
+      />
+      <h5 class="headingOne mt-3">Hi!I'm</h5>
+      <h1>Rezvan Sameti</h1>
+      <h5 class="headingThree">a front-end developer based in Iran,Tehran</h5>
+      <div class="row mt-5">
+        <div class="col-md-4 text-center"></div>
+        <div class="myButton col-md-4 text-center">
+          <a class="btn btn-danger contactButton" href="#" role="button"
+            >Contact me</a
+          >
+        </div>
+        <div class="col-md-4 text-center"></div>
       </div>
     </body>
   </div>
