--- a/index.html
+++ b/index.html
@@ -30,15 +30,17 @@
   </head>
   <div class="container">
     <body>
-      <img
-        src="src/my-picture.jpg"
-        alt="Rezvan Sameti"
-        width="150px"
-        class="mt-5"
-      />
-      <h5 class="headingOne mt-3">Hi!I'm</h5>
-      <h1>Rezvan Sameti</h1>
-      <h5 class="headingThree">a front-end developer based in Iran,Tehran</h5>
+      <div class="hero">
+        <img
+          src="src/my-picture.jpg"
+          alt="Rezvan Sameti"
+          width="150px"
+          class="mt-5 img-fluid rounded"
+        />
+        <h5 class="headingOne mt-3">Hi!I'm</h5>
+        <h1>Rezvan Sameti</h1>
+        <h5 class="headingThree">a front-end developer based in Iran,Tehran</h5>
+      </div>
       <div class="row mt-5">
         <div class="col-md-4 text-center"></div>
         <div class="myButton col-md-4 text-center">
