--- a/index.html
+++ b/index.html
@@ -40,15 +40,42 @@
         <h5 class="headingOne mt-3">Hi!I'm</h5>
         <h1>Rezvan Sameti</h1>
         <h5 class="headingThree">a front-end developer based in Iran,Tehran</h5>
-      </div>
-      <div class="row mt-5">
-        <div class="col-md-4 text-center"></div>
-        <div class="myButton col-md-4 text-center">
-          <a class="btn btn-danger contactButton" href="#" role="button"
-            >Contact me</a
-          >
+
+        <div class="row mt-5">
+          <div class="col-md-4 text-center"></div>
+          <div class="myButton col-md-4 text-center">
+            <a class="btn btn-danger contactButton" href="#" role="button"
+              >Contact me</a
+            >
+          </div>
+          <div class="col-md-4 text-center"></div>
         </div>
-        <div class="col-md-4 text-center"></div>
+      </div>
+      <div class="starter mt-3 mb-3">
+        Here are some of the best projects I have done so far:
+      </div>
+      <div class="row text-center">
+        <div class="col-6">
+          <img
+            src="images/myWeatherApp.jpg"
+            alt="a nice weather app"
+            title="my wether app"
+            class="img-fluid rounded"
+          />
+        </div>
+      
+      <div class="col-6 text-center">
+        <h2>Weather App</h2>
+        <p>
+          This is an awesome weather app. Give it a try to see how different it
+          is from all weather apps which you have already used.🌤
+        </p>
+        <a
+          class="btn btn-dark"
+          href="https://darling-pony-e2bc6a.netlify.app/"
+          title="try an amazing weather app"
+          >Try this app</a
+        >
       </div>
     </body>
   </div>
