added 2 other sample projects and made the page more responsive

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <body>
       <div class="hero">
         <img
-          src="src/my-picture.jpg"
+          src="images/my-picture.jpg"
           alt="Rezvan Sameti"
           width="150px"
           class="mt-5 img-fluid rounded"
@@ -55,7 +55,7 @@
         Here are some of the best projects I have done so far:
       </div>
       <div class="row text-center">
-        <div class="col-6">
+        <div class="col d-none d-md-block">
           <img
             src="images/myWeatherApp.jpg"
             alt="a nice weather app"
@@ -63,20 +63,72 @@
             class="img-fluid rounded"
           />
         </div>
-      
-      <div class="col-6 text-center">
-        <h2>Weather App</h2>
-        <p>
-          This is an awesome weather app. Give it a try to see how different it
-          is from all weather apps which you have already used.🌤
-        </p>
-        <a
-          class="btn btn-dark"
-          href="https://darling-pony-e2bc6a.netlify.app/"
-          title="try an amazing weather app"
-          >Try this app</a
-        >
+
+        <div class="col text-center">
+          <h2>Weather App</h2>
+          <p>
+            This is an awesome weather app. Give it a try to see how different
+            it is from all weather apps which you have already used.🌤
+          </p>
+          <a
+            class="btn btn-dark"
+            href="https://darling-pony-e2bc6a.netlify.app/"
+            title="try an amazing weather app"
+            >Try this app</a
+          >
+        </div>
       </div>
+      <hr />
+      <div class="row mt-3 mb-3">
+        <div class="col text-center">
+          <h2 class="mt-5">Advertising App</h2>
+          <p class="mt-5">
+            If you own a bussiness and you would like to have the most
+            attractive advertisements to sell your products you can acount on
+            me.☺
+          </p>
+          <a
+            class="btn btn-dark mt-5"
+            href="#"
+            title="try an amazing advertising app"
+            >Try this app</a
+          >
+        </div>
+        <div class="col d-none d-md-block">
+          <img
+            src="images/PersianCarpet.jpg"
+            alt="a nice advertising app"
+            title="my advertising app"
+            class="img-fluid rounded"
+          />
+        </div>
+      </div>
+      <hr />
+      <div class="row" mt-3 mb-3>
+        <div class="col d-none d-md-block">
+          <img
+            src="images/yogurt.png"
+            alt="a nice health app"
+            title="my health app"
+            class="img-fluid rounded"
+          />
+        </div>
+        <div class="col text-center">
+          <h2 class="mt-5">Health App</h2>
+          <p>Do you care about eating healthy food?</p>
+          <p>
+            Try my health app and learn a lot about differnt kinds of lealthy
+            food.🥗
+          </p>
+          <a
+            class="btn btn-dark mt-5"
+            href="#"
+            title="Try an amazing health app"
+            >Try this app</a
+          >
+        </div>
+      </div>
+      <hr />
     </body>
   </div>
 </html>
