--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       crossorigin="anonymous"
     ></script>
     <link href="src/styles.css" rel="stylesheet" />
-    <title>Document</title>
+    <title>Rezvan Sameti(Front-End Developer)</title>
   </head>
   <div class="container">
     <body>
@@ -34,6 +34,7 @@
         <img
           src="images/my-picture.jpg"
           alt="Rezvan Sameti"
+          title="Rezvan Sameti(Front-End Developer)"
           width="150px"
           class="mt-5 img-fluid rounded"
         />
