--- a/about-me.html
+++ b/about-me.html
@@ -48,7 +48,7 @@
               <div class="col-md-2 text-center"></div>
             </div>
           </div>
-          <div class="col">
+          <div class="col d-none d-md-block">
             <img
               src="images/my-picture.jpg"
               alt="Rezvan Sameti"
