added a work page

--- a/about-me.html
+++ b/about-me.html
@@ -30,7 +30,7 @@
   <div class="container">
     <body>
       <div class="aboutHero">
-        <div class="row">
+        <div class="row text-center">
           <div class="col">
             <h1 class="aboutPageHeading">Rezvan Sameti</h1>
             <p>
@@ -38,7 +38,7 @@
               weather app, a health app and different advertising pages.
             </p>
 
-            <div class="row mt-5">
+            <div class="row text-center mt-5">
               <div class="col-md-2 text-center"></div>
               <div class="myButton col-md-8 text-center">
                 <a class="btn btn-danger contactButton" href="#" role="button"
