--- a/about-me.html
+++ b/about-me.html
@@ -20,6 +20,10 @@
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Dancing+Script:wght@700&family=Lobster&family=Tilt+Warp&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Dancing+Script:wght@700&family=Lobster&family=Poppins:wght@700&family=Tilt+Warp&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/ae34ec4bba.js"
       crossorigin="anonymous"
@@ -29,6 +33,20 @@
   </head>
   <div class="container">
     <body>
+      <div class="container">
+        <nav class="d-flex justify-content-between">
+          <p class="nav-name">
+            <span> <i class="fa-solid fa-laptop-code"></i></span>
+            <span class="title-name">Rezvan Sameti</span>
+          </p>
+          <ul>
+            <li><a href="/index.html" target="_blank">Home</a></li>
+            <li><a href="#" target="_blank">About Me</a></li>
+            <li><a href="/work.html" target="_blank">My Projects</a></li>
+            <li><a href="/contact-me.html" target="_blank">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
       <div class="aboutHero">
         <div class="row text-center">
           <div class="col">
@@ -41,7 +59,11 @@
             <div class="row text-center mt-5">
               <div class="col-md-2 text-center"></div>
               <div class="myButton col-md-8 text-center">
-                <a class="btn btn-danger contactButton" href="#" role="button"
+                <a
+                  class="btn btn-danger contactButton"
+                  href="/work.html"
+                  target="_blank"
+                  role="button"
                   >See my projects</a
                 >
               </div>
