--- a/contact-me.html
+++ b/contact-me.html
@@ -36,6 +36,20 @@
     <title>Contact Me</title>
   </head>
   <body>
+    <div class="container">
+      <nav class="d-flex justify-content-between">
+        <p class="nav-name">
+          <span> <i class="fa-solid fa-laptop-code"></i></span>
+          <span class="title-name">Rezvan Sameti</span>
+        </p>
+        <ul>
+          <li><a href="/index.html" target="_blank">Home</a></li>
+          <li><a href="/about-me.html" target="_blank">About Me</a></li>
+          <li><a href="/work.html" target="_blank">My Projects</a></li>
+          <li><a href="#" target="_blank">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
     <h1 class="get-in-touch">
       Let's get in touch!
       <br />
