--- a/work.html
+++ b/work.html
@@ -20,6 +20,10 @@
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Dancing+Script:wght@700&family=Lobster&family=Tilt+Warp&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Dancing+Script:wght@700&family=Lobster&family=Poppins:wght@700&family=Tilt+Warp&display=swap"
+      rel="stylesheet"
+    />
     <script
       src="https://kit.fontawesome.com/ae34ec4bba.js"
       crossorigin="anonymous"
@@ -29,14 +33,21 @@
   </head>
   <div class="container">
     <body>
-      <div class="workPageHero mt-5 mb-3 text-center">
-        <h5 class="workPageHeadingOne mt-3">🙂</h5>
-        <h1 class="workPageName">Rezvan Sameti</h1>
-        <h2 class="workPageHeadingThree">
-          a front-end developer based in Iran,Tehran
-        </h2>
-        <div class="icon"><i class="fa-solid fa-laptop-code"></i></div>
+      <div class="container">
+        <nav class="d-flex justify-content-between">
+          <p class="nav-name">
+            <span> <i class="fa-solid fa-laptop-code"></i></span>
+            <span class="title-name">Rezvan Sameti</span>
+          </p>
+          <ul>
+            <li><a href="/index.html" target="_blank">Home</a></li>
+            <li><a href="/about-me.html" target="_blank">About Me</a></li>
+            <li><a href="#" target="_blank">My Projects</a></li>
+            <li><a href="/contact-me.html" target="_blank">Contact</a></li>
+          </ul>
+        </nav>
       </div>
+
       <p class="look">Take a look at what I have been working on...</p>
       <div class="row">
         <div class="col-md-6 mt-3 mb-3">
