--- a/contact-me.html
+++ b/contact-me.html
@@ -57,15 +57,21 @@
     </h1>
     <h5 class="mb-3">
       E.mail <br />
-      <a href="mailto:team@shecodes.io">front-end-projects@gmail.com</a>
+      <a href="mailto:team@shecodes.io" target="_blank"
+        >front-end-projects@gmail.com</a
+      >
     </h5>
     <h5 class="mb-3">
-      Phone: <br />
-      <a href="#"> +(98) 222 873 23</a>
+      Twitter: <br />
+      <a href="https://www.twitter.com/@rezvan.codes" target="_blank"
+        >@rezvan.codes</a
+      >
     </h5>
     <h5 class="mb-3">
       Instagram : <br />
-      <a href="#"> @rezvan.codes</a>
+      <a href="https://www.instagram.com/rezvan.codes" target="_blank">
+        @rezvan.codes</a
+      >
     </h5>
   </body>
 </html>
