--- a/index.html
+++ b/index.html
@@ -152,6 +152,50 @@
         </div>
       </div>
       <hr />
+
+      <div class="work-inquiry mt-5 mb-5">
+        <div class="row">
+          <div class="col-md-6 mt-3 mb-5 text-center">
+            <h1 class="work-together-one">Work inquiry</h1>
+            <h5 class="work-together-two text-muted">Let's work together!</h5>
+          </div>
+          <div class="myButton col-md-6 mt-5 mb-5 text-center">
+            <a
+              class="btn btn-danger contactButton"
+              href="/contact-me.html"
+              target="_blank"
+              role="button"
+              >Contact me</a
+            >
+          </div>
+        </div>
+      </div>
+
+      <footer class="mb-5 mt-5">
+        <a
+          href="https://www.instagram.com/rezvan.codes"
+          target="_blank"
+          class="contact-item"
+          title="Instagram"
+        >
+          <i class="fa-brands fa-instagram"></i
+        ></a>
+        <a
+          href="https://www.twitter.com/rezvan.codes"
+          target="_blank"
+          class="contact-item"
+          title="Twitter"
+        >
+          <i class="fa-brands fa-twitter"></i
+        ></a>
+        <a
+          href="mailto:team@shecodes.io"
+          target="_blank"
+          class="contact-item"
+          title="Email"
+          ><i class="fa-solid fa-envelope"></i
+        ></a>
+      </footer>
     </body>
   </div>
 </html>
