--- a/work.html
+++ b/work.html
@@ -95,6 +95,31 @@
           />
         </div>
       </div>
+      <footer class="mb-5 mt-5">
+        <a
+          href="https://www.instagram.com/rezvan.codes"
+          target="_blank"
+          class="contact-item"
+          title="Instagram"
+        >
+          <i class="fa-brands fa-instagram"></i
+        ></a>
+        <a
+          href="https://www.twitter.com/rezvan.codes"
+          target="_blank"
+          class="contact-item"
+          title="Twitter"
+        >
+          <i class="fa-brands fa-twitter"></i
+        ></a>
+        <a
+          href="mailto:team@shecodes.io"
+          target="_blank"
+          class="contact-item"
+          title="Email"
+          ><i class="fa-solid fa-envelope"></i
+        ></a>
+      </footer>
     </body>
   </div>
 </html>
