--- a/index.html
+++ b/index.html
@@ -30,7 +30,11 @@
       crossorigin="anonymous"
     ></script>
     <link href="src/styles.css" rel="stylesheet" />
-    <title>Rezvan Sameti(Front-End Developer)</title>
+    <title>Front-End Developer - Rezvan Sameti</title>
+    <meta
+      name="description"
+      content="Rezvan Sameti is a professionally trained front-end developer based in Iran, Tehran."
+    />
   </head>
   <div class="container">
     <body>
@@ -41,10 +45,26 @@
             <span class="title-name">Rezvan Sameti</span>
           </p>
           <ul>
-            <li><a href="#" target="_blank">Home</a></li>
-            <li><a href="/about-me.html" target="_blank">About Me</a></li>
-            <li><a href="/work.html" target="_blank">My Projects</a></li>
-            <li><a href="/contact-me.html" target="_blank">Contact</a></li>
+            <li>
+              <a href="/" target="_blank" title="Hoempage" class="active"
+                >Home</a
+              >
+            </li>
+            <li>
+              <a href="/about-me.html" target="_blank" title="About Rezvan"
+                >About Me</a
+              >
+            </li>
+            <li>
+              <a href="/work.html" target="_blank" title="Rezvan's work"
+                >My Projects</a
+              >
+            </li>
+            <li>
+              <a href="/contact-me.html" target="_blank" title="Contact Rezvan"
+                >Contact</a
+              >
+            </li>
           </ul>
         </nav>
       </div>
@@ -56,9 +76,9 @@
           width="150px"
           class="mt-5 img-fluid rounded main-picture"
         />
-        <h5 class="headingOne mt-3">Hi!I'm</h5>
+        <h4 class="headingOne mt-3">Hi!I'm</h4>
         <h1>Rezvan Sameti</h1>
-        <h5 class="headingThree">a front-end developer based in Iran,Tehran</h5>
+        <h2 class="headingThree">a front-end developer based in Iran,Tehran</h2>
 
         <div class="row mt-5">
           <div class="col-md-4 text-center"></div>
@@ -74,10 +94,10 @@
           <div class="col-md-4 text-center"></div>
         </div>
       </div>
-      <div class="starter mt-3 mb-3">
+      <div class="starter mt-3">
         Here are some of the best projects I have done so far:
       </div>
-      <div class="row text-center">
+      <div class="row text-center weather-app">
         <div class="col d-none d-md-block">
           <img
             src="images/myWeatherApp.jpg"
@@ -94,7 +114,7 @@
             it is from all weather apps which you have already used.🌤
           </p>
           <a
-            class="btn btn-dark"
+            class="btn btn-dark mt-5"
             href="https://darling-pony-e2bc6a.netlify.app/"
             title="try an amazing weather app"
             >Try this app</a
@@ -105,14 +125,14 @@
       <div class="row mt-3 mb-3">
         <div class="col text-center">
           <h2 class="mt-5">Advertising App</h2>
-          <p class="mt-5">
+          <p>
             If you own a bussiness and you would like to have the most
             attractive advertisements to sell your products you can acount on
             me.☺
           </p>
           <a
             class="btn btn-dark mt-5"
-            href="#"
+            href="/work.html"
             title="try an amazing advertising app"
             >Try this app</a
           >
@@ -138,14 +158,15 @@
         </div>
         <div class="col text-center">
           <h2 class="mt-5">Health App</h2>
-          <p>Do you care about eating healthy food?</p>
           <p>
+            Do you care about eating healthy food?
+            <br />
             Try my health app and learn a lot about differnt kinds of lealthy
             food.🥗
           </p>
           <a
             class="btn btn-dark mt-5"
-            href="#"
+            href="/work.html"
             title="Try an amazing health app"
             >Try this app</a
           >
@@ -156,7 +177,7 @@
       <div class="work-inquiry mt-5 mb-5">
         <div class="row">
           <div class="col-md-6 mt-3 mb-5 text-center">
-            <h1 class="work-together-one">Work inquiry</h1>
+            <h2 class="work-together-one">Work Inquiry</h2>
             <h5 class="work-together-two text-muted">Let's work together!</h5>
           </div>
           <div class="myButton col-md-6 mt-5 mb-5 text-center">
@@ -171,7 +192,7 @@
         </div>
       </div>
 
-      <footer class="mb-5 mt-5">
+      <footer class="mb-3 mt-5">
         <a
           href="https://www.instagram.com/rezvan.codes"
           target="_blank"
@@ -196,6 +217,16 @@
           ><i class="fa-solid fa-envelope"></i
         ></a>
       </footer>
+      <div class="creator">
+        Coded by <span class="footer-name">Rezvan Sameti</span> and open-sourced
+        on
+        <a
+          href="https://github.com/Sameti-R/my-portfolio-project"
+          target="_blank"
+          class="github-link"
+          >GitHub</a
+        >
+      </div>
     </body>
   </div>
 </html>
