--- a/contact-me.html
+++ b/contact-me.html
@@ -33,7 +33,11 @@
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Dancing+Script:wght@700&family=Lobster&family=Poppins:wght@700&family=Tilt+Warp&display=swap"
       rel="stylesheet"
     />
-    <title>Contact Me</title>
+    <meta
+      name="description"
+      content="Rezvan Sameti is a professionally trained front-end developer based in Iran, Tehran. Contact Rezvan."
+    />
+    <title>Contact Rezvan</title>
   </head>
   <body>
     <div class="container">
@@ -43,10 +47,24 @@
           <span class="title-name">Rezvan Sameti</span>
         </p>
         <ul>
-          <li><a href="/index.html" target="_blank">Home</a></li>
-          <li><a href="/about-me.html" target="_blank">About Me</a></li>
-          <li><a href="/work.html" target="_blank">My Projects</a></li>
-          <li><a href="#" target="_blank">Contact</a></li>
+          <li>
+            <a href="/index.html" target="_blank" title="Hoempage">Home</a>
+          </li>
+          <li>
+            <a href="/about-me.html" target="_blank" title="About Rezvan"
+              >About Me</a
+            >
+          </li>
+          <li>
+            <a href="/work.html" target="_blank" title="Rezvan's Work"
+              >My Projects</a
+            >
+          </li>
+          <li>
+            <a href="/" target="_blank" title="Contact Rezvan" class="active"
+              >Contact</a
+            >
+          </li>
         </ul>
       </nav>
     </div>
@@ -56,22 +74,49 @@
       <i class="fa-solid fa-handshake-simple"></i>
     </h1>
     <h5 class="mb-3">
-      E.mail <br />
-      <a href="mailto:team@shecodes.io" target="_blank"
-        >front-end-projects@gmail.com</a
-      >
-    </h5>
-    <h5 class="mb-3">
-      Twitter: <br />
-      <a href="https://www.twitter.com/@rezvan.codes" target="_blank"
-        >@rezvan.codes</a
-      >
-    </h5>
-    <h5 class="mb-3">
-      Instagram : <br />
-      <a href="https://www.instagram.com/rezvan.codes" target="_blank">
-        @rezvan.codes</a
-      >
+      <div class="mb-3">
+        E.mail <br />
+        <a
+          href="mailto:team@shecodes.io"
+          target="_blank"
+          title="Email"
+          alt="Rezvan's email address"
+          >front-end-projects@gmail.com</a
+        >
+      </div>
+
+      <div class="mb-3">
+        Instagram: <br /><a
+          href="https://www.instagram.com/rezvan.codes"
+          target="_blank"
+          title="Instagram"
+          alt="Rezvan on Instagram"
+        >
+          @rezvan.codes
+        </a>
+      </div>
+      <div mb-3>
+        Twitter: <br />
+        <a
+          href="https://www.twitter.com/rezvan.codes"
+          target="_blank"
+          title="Twitter"
+          Alt="Rezvan on Twitter"
+        >
+          @rezvan.codes</a
+        >
+      </div>
+
+      <div class="creator-contact-page">
+        Coded by <span class="footer-name">Rezvan Sameti</span> and open-sourced
+        on
+        <a
+          href="https://github.com/Sameti-R/my-portfolio-project"
+          target="_blank"
+          class="github-link"
+          >GitHub</a
+        >
+      </div>
     </h5>
   </body>
 </html>
