made the last touch

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           />
         </div>
 
-        <div class="col text-center">
+        <div class="col text-center mt-5">
           <h2>Weather App</h2>
           <p>
             This is an awesome weather app. Give it a try to see how different
