made a change in the navbar, as a result clicking on the navbar items does not open a new tap

--- a/contact-me.html
+++ b/contact-me.html
@@ -48,22 +48,16 @@
         </p>
         <ul>
           <li>
-            <a href="/index.html" target="_blank" title="Hoempage">Home</a>
+            <a href="/index.html" title="Hoempage">Home</a>
           </li>
           <li>
-            <a href="/about-me.html" target="_blank" title="About Rezvan"
-              >About Me</a
-            >
+            <a href="/about-me.html" title="About Rezvan">About Me</a>
           </li>
           <li>
-            <a href="/work.html" target="_blank" title="Rezvan's Work"
-              >My Projects</a
-            >
+            <a href="/work.html" title="Rezvan's Work">My Projects</a>
           </li>
           <li>
-            <a href="/" target="_blank" title="Contact Rezvan" class="active"
-              >Contact</a
-            >
+            <a href="/" title="Contact Rezvan" class="active">Contact</a>
           </li>
         </ul>
       </nav>
