--- a/index.html
+++ b/index.html
@@ -46,24 +46,16 @@
           </p>
           <ul>
             <li>
-              <a href="/" target="_blank" title="Hoempage" class="active"
-                >Home</a
-              >
+              <a href="/" title="Hoempage" class="active">Home</a>
             </li>
             <li>
-              <a href="/about-me.html" target="_blank" title="About Rezvan"
-                >About Me</a
-              >
+              <a href="/about-me.html" title="About Rezvan">About Me</a>
             </li>
             <li>
-              <a href="/work.html" target="_blank" title="Rezvan's work"
-                >My Projects</a
-              >
+              <a href="/work.html" title="Rezvan's work">My Projects</a>
             </li>
             <li>
-              <a href="/contact-me.html" target="_blank" title="Contact Rezvan"
-                >Contact</a
-              >
+              <a href="/contact-me.html" title="Contact Rezvan">Contact</a>
             </li>
           </ul>
         </nav>
