--- a/about-me.html
+++ b/about-me.html
@@ -45,22 +45,16 @@
           </p>
           <ul>
             <li>
-              <a href="/index.html" target="_blank" title="Hoempage">Home</a>
+              <a href="/index.html" title="Hoempage">Home</a>
             </li>
             <li>
-              <a href="/" target="_blank" title="About Rezvan" class="active"
-                >About Me</a
-              >
+              <a href="/" title="About Rezvan" class="active">About Me</a>
             </li>
             <li>
-              <a href="/work.html" target="_blank" title="Rezvan's Work"
-                >My Projects</a
-              >
+              <a href="/work.html" title="Rezvan's Work">My Projects</a>
             </li>
             <li>
-              <a href="/contact-me.html" target="_blank" title="Contact Rezvan"
-                >Contact</a
-              >
+              <a href="/contact-me.html" title="Contact Rezvan">Contact</a>
             </li>
           </ul>
         </nav>
