--- a/work.html
+++ b/work.html
@@ -45,22 +45,16 @@
           </p>
           <ul>
             <li>
-              <a href="/index.html" target="_blank" title="Hoempage">Home</a>
+              <a href="/index.html" title="Hoempage">Home</a>
             </li>
             <li>
-              <a href="/about-me.html" target="_blank" title="About Rezvan"
-                >About Me</a
-              >
+              <a href="/about-me.html" title="About Rezvan">About Me</a>
             </li>
             <li>
-              <a href="/" target="_blank" title="Rezvan's Work" class="active"
-                >My Projects</a
-              >
+              <a href="/" title="Rezvan's Work" class="active">My Projects</a>
             </li>
             <li>
-              <a href="/contact-me.html" target="_blank" title="Contact Rezvan"
-                >Contact</a
-              >
+              <a href="/contact-me.html" title="Contact Rezvan">Contact</a>
             </li>
           </ul>
         </nav>
