corrected the link address to the same page and a spelling mistake

--- a/about-me.html
+++ b/about-me.html
@@ -45,10 +45,12 @@
           </p>
           <ul>
             <li>
-              <a href="/index.html" title="Hoempage">Home</a>
+              <a href="/index.html" title="Homepage">Home</a>
             </li>
             <li>
-              <a href="/" title="About Rezvan" class="active">About Me</a>
+              <a href="/about-me.html" title="About Rezvan" class="active"
+                >About Me</a
+              >
             </li>
             <li>
               <a href="/work.html" title="Rezvan's Work">My Projects</a>
