--- a/contact-me.html
+++ b/contact-me.html
@@ -48,7 +48,7 @@
         </p>
         <ul>
           <li>
-            <a href="/index.html" title="Hoempage">Home</a>
+            <a href="/index.html" title="Homepage">Home</a>
           </li>
           <li>
             <a href="/about-me.html" title="About Rezvan">About Me</a>
@@ -57,7 +57,9 @@
             <a href="/work.html" title="Rezvan's Work">My Projects</a>
           </li>
           <li>
-            <a href="/" title="Contact Rezvan" class="active">Contact</a>
+            <a href="/contact-me.html" title="Contact Rezvan" class="active"
+              >Contact</a
+            >
           </li>
         </ul>
       </nav>
