--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           </p>
           <ul>
             <li>
-              <a href="/" title="Hoempage" class="active">Home</a>
+              <a href="/" title="Homepage" class="active">Home</a>
             </li>
             <li>
               <a href="/about-me.html" title="About Rezvan">About Me</a>
