--- a/work.html
+++ b/work.html
@@ -45,13 +45,15 @@
           </p>
           <ul>
             <li>
-              <a href="/index.html" title="Hoempage">Home</a>
+              <a href="/index.html" title="Homepage">Home</a>
             </li>
             <li>
               <a href="/about-me.html" title="About Rezvan">About Me</a>
             </li>
             <li>
-              <a href="/" title="Rezvan's Work" class="active">My Projects</a>
+              <a href="/work.html" title="Rezvan's Work" class="active"
+                >My Projects</a
+              >
             </li>
             <li>
               <a href="/contact-me.html" title="Contact Rezvan">Contact</a>
